<resources>
    <string name="app_name" translatable="false">Vehicle Fuel Logger</string>

    <string name="settings">Settings</string>
    <string name="about_app">Keep track of fuel added for all vehicles!</string>
    <string name="see_app_on_boarding">See App On Boarding</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="check_my_other_apps">Check my other apps</string>
    <string name="add_car">Add Car</string>
    <string name="enter_car_name">Enter Car Name</string>
    <string name="distance_travelled">Distance Car has Covered till now</string>
    <string name="additional_info">Enter Additional Information</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="add_fuel_log">Add Fuel Log</string>
    <string name="fuel_units">Fuel Units</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="odometer_value">Odometer</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>

</resources>
